# softeer_mini

./: .gitignore  package-lock.json  pyproject.toml  test.ipynb
app/: constants.py  main.py  players.json  test.py
app/core/: extractor.py  fbref_parser.py  fotmob_parser.py  page_crawler.py
app/extractor/: __init__.py  constants.py  core.py  fotmob_extractor.py
app/extractor/components/: fotmob_parser.py  html_crawler.py
app/extractor/parser/: fbref.py  fotmob.py
data/fbref/html/: amadou-onana_2025-01-31.html  andres-garcia_2025-01-31.html  boubacar-kamara_2025-01-31.html  donyell-malen_2025-01-31.html  emile-smith-rowe_2025-01-31.html  emiliano-martinez_2025-01-31.html  ezri-konsa_2025-01-31.html  ian-maatsen_2025-01-31.html  jacob-ramsey_2025-01-31.html  jhon-duran_2025-01-31.html  john-mcginn_2025-01-31.html  kortney-hause_2025-01-31.html  kosta-nedeljkovic_2025-01-31.html  lamare-bogarde_2025-01-31.html  leon-bailey_2025-01-31.html  lucas-digne_2025-01-31.html  matty-cash_2025-01-31.html  morgan-rogers_2025-01-31.html  ollie-watkins_2025-01-31.html  pau-torres_2025-01-31.html  robin-olsen_2025-01-31.html  ross-barkley_2025-01-31.html  son-heung-min_2025-01-31.html  tyrone-mings_2025-01-31.html  youri-tielemans_2025-01-31.html
data/fbref/json/: amadou-onana.json  andres-garcia.json  boubacar-kamara.json  donyell-malen.json  emiliano-martinez.json  ezri-konsa.json  ian-maatsen.json  jacob-ramsey.json  jhon-duran.json  john-mcginn.json  kortney-hause.json  kosta-nedeljkovic.json  (+11 more)
prototype/: package-lock.json  package.json
prototype/app/: page.tsx
(+54 files in other folders)
