[tool.poetry]
name = "softeer-mini"
version = "0.1.0"
description = ""
authors = ["reudekx <reudekx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
