[tool.poetry]
name = "softeer-mini"
version = "0.1.0"
description = ""
authors = ["reudekx <reudekx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
bs4 = "^0.0.2"
requests = "^2.32.3"
pandas = "^2.2.3"
tabulate = "^0.9.0"
jinja2 = "^3.1.5"
nodeenv = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
